# graph-geometry

./: .gitignore  CMakeLists.txt  GraphGeometry.pri  GraphGeometry.pro  README.md  graphgeometry_global.h
include/: line.h  mathematics.h  point.h  section.h  twodvector.h
include/2d/: CMakeLists.txt  line.h  point.h  section.h  vector.h
include/3d/: CMakeLists.txt  plane.h  point.h  ray.h  sphere.h  vector.h
src/2d/: CMakeLists.txt  line.cpp  point.cpp  section.cpp  vector.cpp
src/3d/: CMakeLists.txt  plane.cpp  point.cpp  ray.cpp  sphere.cpp  vector.cpp
